Fixed dumb layout bug

--- a/resource/css/index.css
+++ b/resource/css/index.css
@@ -1,4 +1,4 @@
-html, body {
+nopehtml, body {
 	padding: 0;
 	margin: 0;
 	color: #ffffff;
